# adk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  licenses.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: ci-check.md  pr-reviewer.md  resource-scaffolder.md  test-writer.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: coverage_comment.py  update_version.py
.github/workflows/: auto-update-docs.yaml  auto-version-and-tag.yml  build-docs.yaml  ci.yml  coverage-comment.yml  coverage.yml  publish-docs.yaml  release.yaml  slack-release-notification.yaml  stale.yml  sync-schema.yml
docs/: __init__.py  gen_cli_reference.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: index.md
docs/docs/community/: discord.md
docs/docs/concepts/: anti-patterns.md  multi-user-and-guardrails.md  resource-architecture.md  working-locally.md
docs/docs/development/: docs.md
docs/docs/examples/: confirm-caller-id-before-sms.md  index.md  sms-or-transfer-fallback.md  venue-specific-goodbye.md
docs/docs/get-started/: access-and-waitlist.md  agent-wizard.md  first-commands.md  get-started.md  installation.md  prerequisites.md  walkthrough-video.md  what-is-the-adk.md
docs/docs/legal/: licensing.md
docs/docs/reference/: agent_settings.md  branch_merge.md  chat_settings.md  cli.md  entities.md  experimental_config.md  flows.md  functions.md  handoffs.md  response_control.md  safety_filters.md  sms.md  speech_recognition.md  testing.md  tests.md  tooling.md  topics.md  variables.md  variants.md  voice_settings.md
docs/docs/stylesheets/: components.css  content.css  layout.css  navigation.css  themes.css  tokens.css
docs/docs/tutorials/: build-an-agent.md  index.md  restaurant-booking-agent.md
docs/overrides/: main.html
docs/overrides/partials/: source.html
docs/scripts/: update_docs.py
scripts/: sync_runtime_stubs.py  visualize_flow.py
src/poly/: call.py  cli.py  console.py  constants.py  migration_utils.py  project.py  projection_diff.py  telemetry.py  utils.py
src/poly/docs/: .gitignore  agent_settings.md  chat_settings.md  docs.md  entities.md  flows.md  functions.md  mkdocs.yml  response_control.md  safety_filters.md  speech_recognition.md  tests.md  topics.md  variables.md  variants.md  voice_settings.md
src/poly/handlers/: auth0_handler.py  github_api_handler.py  sdk.py  (+4 more)
(+177 files in other folders)
