[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polyai-adk-docs"
version = "0.1.0"
description = "Documentation build dependencies for PolyAI ADK"
requires-python = ">=3.11"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.20",
    "pymdown-extensions==10.14.3",
    "pygments==2.18.0",
]
